kubernetes/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shsxctf-webapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shsxctf-webapp
  template:
    metadata:
      labels:
        app: shsxctf-webapp
    spec:
      containers:
        - name: frontend
          image: index.docker.io/menisisaac/shsxctf-frontend:latest
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
        - name: trccred
