kubernetes/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shsxctf-webapp
  namespace: default
  labels:
    app: shsxctf-webapp
spec:
  selector:
    app: shsxctf-webapp
  type: ClusterIP
  ports:
    - name: http
      port: 8080
