kubernetes/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "12h"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: webapp-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: shsxctf-service
              servicePort: 8080
            path: /administration(/|$)(.*)
